--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,6 @@
 [build]
   command = "npm run build"
   publish = ".next"
-
+  
 [[plugins]]
-  package = "@netlify/next"
+  package = "@netlify/plugin-nextjs"
